--- a/College-portal-System/Views/TeachingAssistant/Results.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/Results.cshtml
@@ -1,5 +1,51 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Results";
+    Layout = "~/Views/Shared/_LayoutTeachingAssistant.cshtml";
 }
+
+<div class="mb-3">
+    <label for="courseName" class="form-label">Course Name</label>
+    <select id="courseName" class="form-select" required>
+        <option value="" disabled selected>Select Course</option>
+        <option value="Math">Math</option>
+        <option value="Physics">Physics</option>
+        <option value="Biology">Biology</option>
+        <option value="History">History</option>
+    </select>
+</div>
+<div class="col-lg-12">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Line Chart</h5>
+
+            <!-- Line Chart -->
+            <canvas id="lineChart" style="max-height: 400px;"></canvas>
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    new Chart(document.querySelector('#lineChart'), {
+                        type: 'line',
+                        data: {
+                            labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
+                            datasets: [{
+                                label: 'Line Chart',
+                                data: [65, 59, 80, 81, 56, 55, 40],
+                                fill: false,
+                                borderColor: 'rgb(75, 192, 192)',
+                                tension: 0.1
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                y: {
+                                    beginAtZero: true
+                                }
+                            }
+                        }
+                    });
+                });
+            </script>
+            <!-- End Line CHart -->
+
+        </div>
+    </div>
+</div>
