--- a/College-portal-System/Views/Shared/_LayoutTeachingAssistant.cshtml
+++ b/College-portal-System/Views/Shared/_LayoutTeachingAssistant.cshtml
@@ -24,221 +24,8 @@
 </head>
 <body>
 
-
-    <header id="header" class="header fixed-top d-flex align-items-center">
-        <div class="d-flex align-items-center justify-content-between">
-            <a asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center">
-                <img src="assets/img/logo.png" alt="" />
-                <span class="d-none d-lg-block">NiceAdmin</span>
-            </a>
-            <i class="bi bi-list toggle-sidebar-btn"></i>
-        </div>
-        <nav class="header-nav ms-auto">
-            <ul class="d-flex align-items-center">
-                <li class="nav-item dropdown">
-                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                        <i class="bi bi-bell"></i>
-                        <span class="badge bg-primary badge-number">4</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                        <li class="dropdown-header">
-                            You have 4 new notifications
-                            <a href="#">
-                                <span class="badge rounded-pill bg-primary p-2 ms-2">View all</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-exclamation-circle text-warning"></i>
-                            <div>
-                                <h4>Lorem Ipsum</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>30 min. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-x-circle text-danger"></i>
-                            <div>
-                                <h4>Atque rerum nesciunt</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>1 hr. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-check-circle text-success"></i>
-                            <div>
-                                <h4>Sit rerum fuga</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>2 hrs. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-info-circle text-primary"></i>
-                            <div>
-                                <h4>Dicta reprehenderit</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-                        <li class="dropdown-footer">
-                            <a href="#">Show all notifications</a>
-                        </li>
-                    </ul>
-                    <!-- End Notification Dropdown Items -->
-                </li>
-                <!-- End Notification Nav -->
-                <!-- End Messages Nav -->
-
-                <li class="nav-item dropdown pe-3">
-                    <a class="nav-link nav-profile d-flex align-items-center pe-0"
-                       href="#"
-                       data-bs-toggle="dropdown">
-                        <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle" />
-                        <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-                    </a>
-                    <!-- End Profile Image Icon -->
-
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                        <li class="dropdown-header">
-                            <h6>Kevin Anderson</h6>
-                            <span>Web Designer</span>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" asp-controller="User" asp-action="Profile">
-                                <i class="bi bi-person"></i>
-                                <span>My Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" asp-controller="User" asp-action="Settings">
-                                <i class="bi bi-gear"></i>
-                                <span>Account Settings</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" asp-controller="Help" asp-action="Index">
-                                <i class="bi bi-question-circle"></i>
-                                <span>Need Help?</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <i class="bi bi-box-arrow-right"></i>
-                                <span>Sign Out</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- End Profile Dropdown Items -->
-                </li>
-                <!-- End Profile Nav -->
-            </ul>
-        </nav>
-    </header>
-    <aside id="sidebar" class="sidebar">
-        <ul class="sidebar-nav" id="sidebar-nav">
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Home" asp-action="Index">
-                    <i class="bi bi-grid"></i>
-                    <span>Dashboard</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed"
-                   data-bs-target="#charts-nav"
-                   data-bs-toggle="collapse"
-                   href="#"
-                   aria-expanded="false">
-                    <i class="bi bi-bar-chart"></i><span>Courses</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="charts-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-                    <!-- Loop Here  -->
-                    <li>
-                        <a asp-controller="Course" asp-action="Details" asp-route-id="1">
-                            <i class="bi bi-circle"></i><span>Parrel</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-controller="Course" asp-action="Details" asp-route-id="2">
-                            <i class="bi bi-circle"></i><span>Course Number 2</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-controller="Course" asp-action="Details" asp-route-id="3">
-                            <i class="bi bi-circle"></i><span>Course Number 3</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Quiz" asp-action="Index">
-                    <i class="bi bi-person"></i>
-                    <span>Quiz</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Assignment" asp-action="Index">
-                    <i class="bi bi-person"></i>
-                    <span>Assignment</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Project" asp-action="Index">
-                    <i class="bi bi-person"></i>
-                    <span>Projects</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Results" asp-action="Index">
-                    <i class="bi bi-person"></i>
-                    <span>Results</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Account" asp-action="Logout">
-                    <i class="bi bi-dash-circle"></i>
-                    <span>Log out</span>
-                </a>
-            </li>
-        </ul>
-    </aside>
+    <partial name="TAHeaderPartialView"></partial>
+    <partial name="TASidebarPartialView"></partial>
     <main id="main" class="main">
             @RenderBody()
     </main>
@@ -249,15 +36,15 @@
 
 
 
-    <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="assets/vendor/echarts/echarts.min.js"></script>
-    <script src="assets/vendor/quill/quill.js"></script>
-    <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="assets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="TAAssets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="TAAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="TAAssets/vendor/chart.js/chart.umd.js"></script>
+    <script src="TAAssets/vendor/echarts/echarts.min.js"></script>
+    <script src="TAAssets/vendor/quill/quill.js"></script>
+    <script src="TAAssets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="TAAssets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="TAAssets/vendor/php-email-form/validate.js"></script>
+    <script src="TAAssets/js/main.js"></script>
     <svg id="SvgjsSvg1001"
          width="2"
          height="0"
