--- a/College-portal-System/Views/Shared/_LayoutTeachingAssistant.cshtml
+++ b/College-portal-System/Views/Shared/_LayoutTeachingAssistant.cshtml
@@ -4,28 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - College_portal_System</title>
-    <link href="TAAssets/img/favicon.png" rel="icon" />
-    <link href="TAAssets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="/TAAssets/img/favicon.png" rel="icon" />
+    <link href="/TAAssets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <link href="https://fonts.gstatic.com" rel="preconnect" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
           rel="stylesheet" />
-    <link href="TAAssets/vendor/bootstrap/css/bootstrap.min.css"
+    <link href="/TAAssets/vendor/bootstrap/css/bootstrap.min.css"
           rel="stylesheet" />
-    <link href="TAAssets/vendor/bootstrap-icons/bootstrap-icons.css"
+    <link href="/TAAssets/vendor/bootstrap-icons/bootstrap-icons.css"
           rel="stylesheet" />
-    <link href="TAAssets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="TAAssets/vendor/quill/quill.snow.css" rel="stylesheet" />
-    <link href="TAAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
-    <link href="TAAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-    <link href="TAAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
-    <link href="TAAssets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="TAAssets/css/teaching_assistant_style.css">
+    <link href="/TAAssets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="/TAAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    <link href="/TAAssets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/TAAssets/css/teaching_assistant_style.css">
 </head>
 <body>
 
-    <partial name="TAHeaderPartialView"></partial>
-    <partial name="TASidebarPartialView"></partial>
+    <partial name="_TAHeaderPartialView"></partial>
+    <partial name="_TASidebarPartialView"></partial>
     <main id="main" class="main">
             @RenderBody()
     </main>
@@ -36,15 +36,15 @@
 
 
 
-    <script src="TAAssets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="TAAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="TAAssets/vendor/chart.js/chart.umd.js"></script>
-    <script src="TAAssets/vendor/echarts/echarts.min.js"></script>
-    <script src="TAAssets/vendor/quill/quill.js"></script>
-    <script src="TAAssets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="TAAssets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="TAAssets/vendor/php-email-form/validate.js"></script>
-    <script src="TAAssets/js/main.js"></script>
+    <script src="/TAAssets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="/TAAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/TAAssets/vendor/chart.js/chart.umd.js"></script>
+    <script src="/TAAssets/vendor/echarts/echarts.min.js"></script>
+    <script src="/TAAssets/vendor/quill/quill.js"></script>
+    <script src="/TAAssets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="/TAAssets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="/TAAssets/vendor/php-email-form/validate.js"></script>
+    <script src="/TAAssets/js/main.js"></script>
     <svg id="SvgjsSvg1001"
          width="2"
          height="0"
