--- a/College-portal-System/Views/Shared/_LayoutStudent.cshtml
+++ b/College-portal-System/Views/Shared/_LayoutStudent.cshtml
@@ -10,317 +10,44 @@
           rel="stylesheet" />
 
     <!-- Vendor CSS Files -->
-    <link href="StudentAssets/vendor/bootstrap/css/bootstrap.min.css"
+    <link href="/StudentAssets/vendor/bootstrap/css/bootstrap.min.css"
           rel="stylesheet" />
-    <link href="StudentAssets/vendor/bootstrap-icons/bootstrap-icons.css"
+    <link href="/StudentAssets/vendor/bootstrap-icons/bootstrap-icons.css"
           rel="stylesheet" />
-    <link href="StudentAssets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="StudentAssets/vendor/quill/quill.snow.css" rel="stylesheet" />
-    <link href="StudentAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
-    <link href="StudentAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-    <link href="StudentAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
+    <link href="/StudentAssets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="/StudentAssets/vendor/quill/quill.snow.css" rel="stylesheet" />
+    <link href="/StudentAssets/vendor/quill/quill.bubble.css" rel="stylesheet" />
+    <link href="/StudentAssets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link href="/StudentAssets/vendor/simple-datatables/style.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="StudentAssets/css/style.css" rel="stylesheet" />
+    <link href="/StudentAssets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <header id="header" class="header fixed-top d-flex align-items-center">
-        <div class="d-flex align-items-center justify-content-between">
-            <a href="index.html" class="logo d-flex align-items-center">
-                <img src="StudentAssets/img/logo.png" alt="" />
-                <span class="d-none d-lg-block">NiceAdmin</span>
-            </a>
-            <i class="bi bi-list toggle-sidebar-btn"></i>
-        </div>
-        <!-- End Logo -->
 
-        <div class="search-bar">
-            <form class="search-form d-flex align-items-center"
-                  method="POST"
-                  action="#">
-                <input type="text"
-                       name="query"
-                       placeholder="Search"
-                       title="Enter search keyword" />
-                <button type="submit" title="Search">
-                    <i class="bi bi-search"></i>
-                </button>
-            </form>
-        </div>
-        <!-- End Search Bar -->
-
-        <nav class="header-nav ms-auto">
-            <ul class="d-flex align-items-center">
-                <li class="nav-item d-block d-lg-none">
-                    <a class="nav-link nav-icon search-bar-toggle" href="#">
-                        <i class="bi bi-search"></i>
-                    </a>
-                </li>
-                <!-- End Search Icon-->
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                        <i class="bi bi-bell"></i>
-                        <span class="badge bg-primary badge-number">4</span>
-                    </a><!-- End Notification Icon -->
-
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                        <li class="dropdown-header">
-                            You have 4 new notifications
-                            <a href="#">
-                                <span class="badge rounded-pill bg-primary p-2 ms-2">View all</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-exclamation-circle text-warning"></i>
-                            <div>
-                                <h4>Lorem Ipsum</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>30 min. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-x-circle text-danger"></i>
-                            <div>
-                                <h4>Atque rerum nesciunt</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>1 hr. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-check-circle text-success"></i>
-                            <div>
-                                <h4>Sit rerum fuga</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>2 hrs. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li class="notification-item">
-                            <i class="bi bi-info-circle text-primary"></i>
-                            <div>
-                                <h4>Dicta reprehenderit</h4>
-                                <p>Quae dolorem earum veritatis oditseno</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-                        <li class="dropdown-footer">
-                            <a href="#">Show all notifications</a>
-                        </li>
-                    </ul>
-                    <!-- End Notification Dropdown Items -->
-                </li>
-                <!-- End Notification Nav -->
-                <!-- End Messages Nav -->
-
-                <li class="nav-item dropdown pe-3">
-                    <a class="nav-link nav-profile d-flex align-items-center pe-0"
-                       href="#"
-                       data-bs-toggle="dropdown">
-                        <img src="StudentAssets/img/profile-img.jpg"
-                             alt="Profile"
-                             class="rounded-circle" />
-                        <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-                    </a><!-- End Profile Iamge Icon -->
-
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                        <li class="dropdown-header">
-                            <h6>Kevin Anderson</h6>
-                            <span>Web Designer</span>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center"
-                               asp-controller="Student" asp-action="Profile" asp-route-id="@ViewData["id"]">
-                                <i class="bi bi-person"></i>
-                                <span>My Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center"
-                               href="users-profile.html">
-                                <i class="bi bi-gear"></i>
-                                <span>Account Settings</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center"
-                               href="pages-faq.html">
-                                <i class="bi bi-question-circle"></i>
-                                <span>Need Help?</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider" />
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <i class="bi bi-box-arrow-right"></i>
-                                <span>Sign Out</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <!-- End Profile Dropdown Items -->
-                </li>
-                <!-- End Profile Nav -->
-            </ul>
-        </nav>
-        <!-- End Icons Navigation -->
-    </header>
-    <aside id="sidebar" class="sidebar">
-
-        <ul class="sidebar-nav" id="sidebar-nav">
-
-            <li class="nav-item">
-                <a class="nav-link " href="index.html">
-                    <i class="bi bi-grid"></i>
-                    <span>Dashboard</span>
-                </a>
-            </li><!-- End Dashboard Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-menu-button-wide"></i><span>Courses</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="components-alerts.html">
-                            <i class="bi bi-circle"></i><span>View Courses</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="components-accordion.html">
-                            <i class="bi bi-circle"></i><span>Register Courses</span>
-                        </a>
-                    </li>
-                </ul>
-            </li><!-- End Components Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link " href="#">
-                    <i class="bi bi-journal-text"></i><span>Grades</span></i>
-                </a>
-                <!-- End Forms Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link " href="#">
-                    <i class="bi bi-journal-text"></i><span>Transcript</span></i>
-                </a>
-                <!-- End Tables Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-bar-chart"></i><span>Task</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="charts-chartjs.html">
-                            <i class="bi bi-circle"></i><span>Quiz</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="charts-apexcharts.html">
-                            <i class="bi bi-circle"></i><span>Exam</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="charts-echarts.html">
-                            <i class="bi bi-circle"></i><span>Project</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="charts-echarts.html">
-                            <i class="bi bi-circle"></i><span>Assignment </span>
-                        </a>
-                    </li>
-                </ul>
-            </li><!-- End Charts Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link " href="#">
-                    <i class="bi bi-journal-text"></i><span>Register Department</span></i>
-                </a>
-            </li><!-- End Icons Nav -->
-            <li class="nav-item">
-                <a class="nav-link" asp-controller="Student" asp-action="Profile" asp-route-id="@ViewData["id"]"  >
-                    <i class="bi bi-journal-text"></i><span>Profile</span></i>
-                </a>
-            </li><!-- End Icons Nav -->
-
-
-
-    </aside><!-- End Sidebar-->
+    <partial name="_StudentHeaderPartialView"></partial>
+    <partial name="_StudentaSidePartialView"></partial>
     <main id="main" class="main">
-        <div class="pagetitle">
-            <h1>Blank Page</h1>
-            <nav>
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item">Pages</li>
-                    <li class="breadcrumb-item active">Blank</li>
-                </ol>
-            </nav>
-        </div>
-        <section class="section">
-            <div class="row">
-                @RenderBody()
-            </div>
-        </section>
+        @RenderBody()
     </main>
+    <partial name="_StudentFooterPartialView"></partial>
+    @await RenderSectionAsync("Scripts", required: false)
 
-    <footer id="footer" class="footer">
-        <div class="copyright">
-            © Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-    </footer>
-    <script src="StudentAssets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="StudentAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="StudentAssets/vendor/chart.js/chart.umd.js"></script>
-    <script src="StudentAssets/vendor/echarts/echarts.min.js"></script>
-    <script src="StudentAssets/vendor/quill/quill.js"></script>
-    <script src="StudentAssets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="StudentAssets/vendor/tinymce/tinymce.min.js"></script>
-    <script src="StudentAssets/vendor/php-email-form/validate.js"></script>
+
+
+
+
+    <script src="/StudentAssets/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="/StudentAssets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/StudentAssets/vendor/chart.js/chart.umd.js"></script>
+    <script src="/StudentAssets/vendor/echarts/echarts.min.js"></script>
+    <script src="/StudentAssets/vendor/quill/quill.js"></script>
+    <script src="/StudentAssets/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="/StudentAssets/vendor/tinymce/tinymce.min.js"></script>
+    <script src="/StudentAssets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="StudentAssets/js/main.js"></script>
+    <script src="/StudentAssets/js/main.js"></script>
 
     <svg id="SvgjsSvg1001"
          width="2"
