--- a/College-portal-System/Views/Student/Profile.cshtml
+++ b/College-portal-System/Views/Student/Profile.cshtml
@@ -3,6 +3,14 @@
     ViewData["Title"] = "Profile";
     Layout = "~/Views/Shared/_LayoutStudent.cshtml";
 }
+<div class="pagetitle">
+    <h1>Profile</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">Home</li>
+            <li class="breadcrumb-item active">Profile</li>
+        </ol>
+    </nav>
+</div>
 
-<h1>Profile</h1>
 
