--- a/College-portal-System/Views/TeachingAssistant/_TAHeaderPartialView.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/_TAHeaderPartialView.cshtml
@@ -1,6 +1,6 @@
 ﻿<header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
-        <a asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center">
+        <a asp-controller="TeachingAssistant" asp-action="Index" class="logo d-flex align-items-center">
             <img src="assets/img/logo.png" alt="" />
             <span class="d-none d-lg-block">NiceAdmin</span>
         </a>
