--- a/College-portal-System/Views/TeachingAssistant/_TASidebarPartialView.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/_TASidebarPartialView.cshtml
@@ -1,7 +1,7 @@
 ﻿<aside id="sidebar" class="sidebar">
     <ul class="sidebar-nav" id="sidebar-nav">
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="Home" asp-action="Index">
+            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="Index">
                 <i class="bi bi-grid"></i>
                 <span>Dashboard</span>
             </a>
@@ -34,25 +34,25 @@
             </ul>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="Quiz" asp-action="Index">
+            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="CreateQuiz">
                 <i class="bi bi-person"></i>
                 <span>Quiz</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="Assignment" asp-action="Index">
+            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="Assignments">
                 <i class="bi bi-person"></i>
                 <span>Assignment</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="Project" asp-action="Index">
+            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="Index">
                 <i class="bi bi-person"></i>
                 <span>Projects</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="Results" asp-action="Index">
+            <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="Results">
                 <i class="bi bi-person"></i>
                 <span>Results</span>
             </a>
