--- a/College-portal-System/Views/Student/Index.cshtml
+++ b/College-portal-System/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Student
+﻿@* @model Student
 @{
     ViewData["Title"] = "Index";
     ViewData["id"] = Model.StudentId;
@@ -41,4 +41,4 @@
 
         </div>
     </div>
-</section>
+</section> *@
