--- a/College-portal-System/Views/TeachingAssistant/_TASidebarPartialView.cshtml
+++ b/College-portal-System/Views/TeachingAssistant/_TASidebarPartialView.cshtml
@@ -7,31 +7,20 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link collapsed"
-               data-bs-target="#charts-nav"
-               data-bs-toggle="collapse"
-               href="#"
-               aria-expanded="false">
-                <i class="bi bi-bar-chart"></i><span>Courses</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="charts-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="MyCourses" asp-route-id="@ViewBag.ID">
+                    <i class="bi bi-bar-chart"></i><span>Courses</span>
+               </a>
+            @* <ul id="charts-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <!-- Loop Here  -->
-                <li>
-                    <a asp-controller="Course" asp-action="Details" asp-route-id="1">
-                        <i class="bi bi-circle"></i><span>Parrel</span>
-                    </a>
-                </li>
-                <li>
-                    <a asp-controller="Course" asp-action="Details" asp-route-id="2">
-                        <i class="bi bi-circle"></i><span>Course Number 2</span>
-                    </a>
-                </li>
-                <li>
-                    <a asp-controller="Course" asp-action="Details" asp-route-id="3">
-                        <i class="bi bi-circle"></i><span>Course Number 3</span>
-                    </a>
-                </li>
-            </ul>
+                @foreach(var course in Model) {
+                    <li>
+                        <a asp-controller="Course" asp-action="Details" asp-route-id="@course.CourseID">
+
+                            <i class="bi bi-circle"></i><span>@course.CourseName</span>
+                        </a>
+                    </li>
+                }
+            </ul> *@
         </li>
         <li class="nav-item">
             <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="CreateQuiz">
@@ -42,7 +31,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" asp-controller="TeachingAssistant" asp-action="Assignments">
                 <i class="bi bi-person"></i>
-                <span>Assignment</span>
+                <span>Tasks</span>
             </a>
         </li>
         <li class="nav-item">
