--- a/College-portal-System/Views/_ViewImports.cshtml
+++ b/College-portal-System/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using College_portal_System
 @using College_portal_System.Models
+@using College_portal_System.Models.TAViewModels
+@using DataAccessLayer.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
